styles.css
html,
body {
    width: 100%;
    margin: 0;
    padding: 0;
    font-family: Inter, sans-serif;
    font-size: 16px;
    color: #1b1b1b;
}

a {
    color: #1b1b1b;
    text-decoration: none;
}

header {
    padding: 40px 80px;
}

header #name {
    font-family: "Dancing Script", cursive;
    font-optical-sizing: auto;
    font-style: normal;
    font-size: 2.5rem;
    font-weight: bold;
}

#profile {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 40px 20px 160px 20px;
    animation: fade-in ease 3s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

#profile>img {
    width: 250px;
    margin: 20px;
    border-radius: 100%;
}

#profile>#title {
    margin: 10px;
    text-align: center;
    font-size: 1.4rem;
}

#profile>#title a {
    color: rgb(0, 186, 124);
}

#profile>#bio {
    max-width: 550px;
    margin: 5px;
    text-align: center;
    line-height: 1.5;
    font-size: 1.05rem;
}

#profile>#social {
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#profile>#social a {
    margin: 0 7.5px;
}

#profile>#social a:hover {
    color: rgb(0, 186, 124);
}

#profile>#social i {
    font-size: 1.25rem;
}

#profile>#social i:hover {
    font-size: 1.5rem;
    transition-duration: 0.8s;
}

#podcast {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0px 20px 60px 20px;
    background-color: #a52f89;
}

#podcast>#title {
    margin: 40px 20px;
    font-size: 5rem;
    color: white;
    text-align: center;
    font-family: "Vibes", system-ui;
    font-weight: 400;
    text-shadow: #ff00d0 1px 0 10px, #ff00d0 1px 0 10px;
}

#podcast>#details {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#podcast>#details>img {
    width: 450px;
    box-shadow: 0 0 5px #310120, 0 0 150px #ff00d0;
}

#podcast>#details>#listen {
    width: 450px;
    display: flex;
    justify-content: space-between;
    padding: 20px 0px;
}

#podcast>#details>#listen>a>img {
    width: 140px;
}

#podcast>#details>#episodes {
    max-width: 1000px;
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
    flex-wrap: wrap;
    padding: 15px;
}

#podcast>#details>#episodes>iframe {
    width: 450px;
    height: 102px;
    margin: 10px;
    border-radius: 20px;
}

#podcast>#details>#explore-more {
    background-color: #47c2b1;
    color: white;
    padding: 10px 15px;
    border-radius: 15px;
    font-weight: bold;
    font-size: 0.8rem;
}

@media only screen and (max-width: 768px) {

    #podcast>#details>img {
        width: 400px;
    }

    #podcast>#details>#listen {
        width: 400px;
        padding: 15px 0px;
    }

    #podcast>#details>#listen>a>img {
        width: 125px;
    }

    #podcast>#details>#episodes>iframe {
        width: 400px;
    }
}

#articles .sk-medium-publication-feed-container {
    padding: 50px 75px 50px 75px !important;
}

#articles .sk-medium-publication-feed-load-more-posts {
    margin-bottom: 25px !important;
}

#articles .medium_publication_post_title {
    margin: 10px 2.5px !important;
    font-size: 1.1rem !important;
}

#articles .medium_publication_post_creator {
    margin: 10px 2.5px !important;
    font-size: 0.8rem !important;
}

#articles .sk-description {
    font-size: 0.88rem !important;
}


@media only screen and (max-width: 1000px) {

    #articles .sk-medium-publication-feed-container {
        padding: 50px 25px 50px 25px !important;
    }

    #articles .grid-item-medium-publication-feed,
    #articles .grid-sizer-medium-publication-feed {
        width: 50% !important;
    }
}

@media only screen and (max-width: 768px) {

    #articles .grid-item-medium-publication-feed,
    #articles .grid-sizer-medium-publication-feed {
        width: 100% !important;
    }
}


footer {
    width: 100%;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 0.9rem;
}

footer #name {
    font-family: "Dancing Script", cursive;
    font-size: 1.1rem;
    margin: 0 5px;
}

